update theme info, add footer html

--- a/config/theme.ini
+++ b/config/theme.ini
@@ -1,9 +1,9 @@
 [info]
-name = "Bootstrap 5"
+name = "GDAO S"
 version = "4.0.0"
-author = "Satoru Nakamura"
+author = "Satoru Nakamura, Ryan Schwab"
 description = "Omeka S theme based on bootstrap 5 - https://getbootstrap.com/"
-theme_link = "https://github.com/ldasjp8/Omeka-S-theme-Bootstrap5"
+theme_link = "https://github.com/UCSCLibrary/gdao-s-theme"
 author_link = "https://researchmap.jp/nakamura.satoru?lang=en"
 omeka_version_constraint = "^4.0.0"
 
@@ -56,7 +56,7 @@ elements.top_url.attributes.id = "top_url"
 elements.top_url.type = "Omeka\Form\Element\HtmlTextarea"
 elements.top_url.options.label = "Top Button url"
 elements.top_url.options.info = "URL for top button."
-elements.top_url.attributes.value = ""
+elements.top_url.attributes.value = "item"
 
 elements.sort_property.name = "sort_property"
 ;elements.sort_property.attributes.id = "sort_property"
