--- a/config/theme.ini
+++ b/config/theme.ini
@@ -26,12 +26,12 @@ omeka_version_constraint = "^4.0.0"
 ;elements.logo.type = "Omeka\Form\Element\Asset"
 ;elements.logo.options.label = "Logo"
 
-elements.footer.name = "footer"
-elements.footer.attributes.id = "footer"
-elements.footer.type = "Omeka\Form\Element\HtmlTextarea"
-elements.footer.options.label = "Footer Content"
-elements.footer.options.info = "HTML content to appear in the footer"
-elements.footer.attributes.value = "Powered by Omeka S"
+;elements.footer.name = "footer"
+;elements.footer.attributes.id = "footer"
+;elements.footer.type = "Omeka\Form\Element\HtmlTextarea"
+;elements.footer.options.label = "Footer Content"
+;elements.footer.options.info = "HTML content to appear in the footer"
+;elements.footer.attributes.value = "Powered by Omeka S"
 
 elements.site_sub_title.name = "site_sub_title"
 elements.site_sub_title.attributes.id = "site_sub_title"
