add view helper for building search URLs

--- a/config/theme.ini
+++ b/config/theme.ini
@@ -7,6 +7,8 @@ theme_link = "https://github.com/UCSCLibrary/gdao-s-theme"
 author_link = "https://researchmap.jp/nakamura.satoru?lang=en"
 omeka_version_constraint = "^4.0.0"
 
+helpers[] = "GdaoSearchUrl"
+
 [config]
 ;elements.accent_color.name = "accent_color"
 ;elements.accent_color.type = "Omeka\Form\Element\ColorPicker"
