add view helpers to format values and map labels.

--- a/config/theme.ini
+++ b/config/theme.ini
@@ -8,6 +8,8 @@ author_link = "https://researchmap.jp/nakamura.satoru?lang=en"
 omeka_version_constraint = "^4.0.0"
 
 helpers[] = "GdaoSearchUrl"
+helpers[] = "GdaoValueFormat"
+helpers[] = "GdaoLabelMapper"
 
 [config]
 elements.site_sub_title.name = "site_sub_title"
