--- a/config/theme.ini
+++ b/config/theme.ini
@@ -10,6 +10,7 @@ omeka_version_constraint = "^4.0.0"
 helpers[] = "GdaoSearchUrl"
 helpers[] = "GdaoValueFormat"
 helpers[] = "GdaoLabelMapper"
+helpers[] = "GdaoIsAuthorized"
 
 [config]
 elements.site_sub_title.name = "site_sub_title"
